--- a/precios.html
+++ b/precios.html
@@ -8,24 +8,28 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-	<header id="header" class="header contenedor background">
-		<figure class="logotipo"> <!-- logotipo -->
-			<img src="images/invie.png" width="186" height="60" alt="Invie logotipo">
-		</figure>
-		<nav class="menu"><!-- menu -->
-			<ul>
-				<li>
-					<a href="index.html">home</a>
-				</li>
-				<li>
-					<a href="precios.html">precios</a>
-				</li>
-				<li>
-					<a href="index.html#guitarras">Guitarras</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
+	<div class="background">
+		<header id="header" class="header background">
+			<figure class="logotipo"> <!-- logotipo -->
+				<img src="images/invie.png" width="186" height="60" alt="Invie logotipo">
+			</figure>
+			<nav class="menu"><!-- menu -->
+				<ul>
+					<li>
+						<a href="index.html">home</a>
+					</li>
+					<li>
+						<a href="precios.html">precios</a>
+					</li>
+					<li>
+						<a href="index.html#guitarras">Guitarras</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	</div>
+
+	
 
 	<section class="tabla">
 		<div class="contenedor">
