--- a/precios.html
+++ b/precios.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 	<div class="background">
-		<header id="header" class="header background">
+		<header id="header" class="header contenedor">
 			<figure class="logotipo"> <!-- logotipo -->
 				<img src="images/invie.png" width="186" height="60" alt="Invie logotipo">
 			</figure>
