--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<section id="portada" class="portada background">
 		<!-- portada -->
-		<header id="header" class="header contenedor background">
+		<header id="header" class="header contenedor">
 			<figure class="logotipo"> <!-- logotipo -->
 				<img src="images/invie.png" width="186" height="60" alt="Invie logotipo">
 			</figure>
