Diseño de responsive para tablet listo, falta el diseño para mobiles.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/invie.
 	css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Allerta' rel='stylesheet' type='text/css'>
+	<!-- <link rel="stylesheet" media="(max-width:800px)" type="text/css" href="css/media-querie.css"> -->
 </head>
 <body>
 	
@@ -102,7 +103,7 @@
 			
 			<div class="col2">
 				<label for="comentarios">Comentarios</label>
-				<textarea name="comentarios" id="comentarios" cols="30" rows="7"></textarea>
+				<textarea name="comentarios" id="comentarios" cols="25" rows="7"></textarea>
 				<input type="submit" value="Enviar" class="button" />
 			</div>
 		</form>	
