media clase de media queries con javascript

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
 	<script>
+	if (true) {
+		//Si se cumple hagamos esto
+	} else {
+		//si no se cumple, hagamos esto 
+	}
+
+		
 		var $burgerButtom = document.getElementById('burger-buttom');
 		var $menu = document.getElementById('menu');
 
