--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<!-- guitarras -->
 		<h2 class="">Nuestras Guitarras</h2><!-- titulo -->
 		<article class="guitarra b"><!-- guitarra1 -->
-			<img src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350" class="derecha">
+			<img data-src="images/invie-acustica.png" alt="Guitarra Invie Acustica" width="350" class="derecha">
 			<div class="contenedor-guitarra-a">
 				<h3 class="title-b">Invie Acústica</h3>
 				<ol>
@@ -55,7 +55,7 @@
 		</article>
 		
 		<article class="guitarra"><!-- guitarra2 -->
-			<img src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350" class="izquierda">
+			<img data-src="images/invie-classic.png" alt="Guitarra Invie Classic" width="350" class="izquierda">
 			<div class="contenedor-guitarra-b">
 				<h3 class="title-b">Invie Classics</h3>
 				<ol>
@@ -69,7 +69,7 @@
 	<footer class="footer">
 	<div class="contenedor">		
 		<div class="contacto">
-			<img src="images/invie-white.png" alt="logotipo blanco"><!-- img -->
+			<img data-src="images/invie-white.png" alt="logotipo blanco"><!-- img -->
 			<a href="tel:+515512280"><strong>Telefono</strong> <span>5512280</span></a><!-- tel -->
 			<a href="mailto:contacto@invie.com"><strong>E-mail</strong><span>contacto@invie.com</span></a><!-- email -->
 		</div>
@@ -111,22 +111,50 @@
 		</form>	
 	</div>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-	<script>
-	if (true) {
-		//Si se cumple hagamos esto
-	} else {
-		//si no se cumple, hagamos esto 
-	}
 
-		
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.6.2/blazy.min.js" type="text/javascript" charset="utf-8"></script>
+	<script> 
+
+		var consulta = window.matchMedia('(max-width: 800px)');
+		consulta.addListener(mediaQuery);
+
 		var $burgerButtom = document.getElementById('burger-buttom');
 		var $menu = document.getElementById('menu');
-
-		$burgerButtom.addEventListener('touchstart', toggleMenu);
-
 		function toggleMenu(){
 			$menu.classList.toggle('active');
 		}
+
+		function mediaQuery(){
+			if(consulta.matches) {
+			//Si se cumple hagamos esto
+			console.log('Se cumplió la condición.');
+
+			$burgerButtom.addEventListener('touchstart', toggleMenu);
+
+
+
+			} else {
+			//si no se cumple, hagamos esto 
+			console.log('No Se cumplió la condición.');
+			$burgerButtom.removeEventListener('touchstart', toggleMenu);
+			}
+		}
+
+		mediaQuery();
+
+	
+		var bLazy = new Blazy({
+    	// options
+    	selector: "img", 
+		});
+
+		
+		/*var $burgerButtom = document.getElementById('burger-buttom');
+		var $menu = document.getElementById('menu');
+*/
+		
+
+		
 		// $menu.classList.toogle('active')
 	</script>
 	</footer>
